GC final checks

--- a/document/ieee_trans/asr_ieeetrans.tex
+++ b/document/ieee_trans/asr_ieeetrans.tex
@@ -29,8 +29,12 @@
 \usepackage{listings}
 \usepackage[shortlabels]{enumitem}
 
+% for IEEE/ARXIV template use:
 \newcommand{\pathToSourceFiles}{../source}
 \newcommand{\pathToOtherFiles}{../other}
+% for ARXIV UPLOAD ONLY use:
+% \newcommand{\pathToSourceFiles}{source}
+% \newcommand{\pathToOtherFiles}{other}
 
 
 %-------------------------------------------------------------------------------
