--- a/document/source/body.tex
+++ b/document/source/body.tex
@@ -975,8 +975,8 @@ According to Rule 124 in the UKHC the national speed limit of the single carriag
 	\begin{tabular}{ clcc }
 		\hline
 		\\
-		\textbf{} & \multirow{3}{*}{\textbf{}} & \multicolumn{2}{c}{\textbf{Overtaking manoeuvre stages}}\\
-		\textbf{Assertion No.} & \textbf{Assertion} & \textbf{Pulling out} & \textbf{Passing VBP} %& \textbf{Cutting in}
+		\textbf{Assertion} & \multirow{3}{*}{\textbf{}} & \multicolumn{2}{c}{\textbf{Overtaking stages}}\\
+		\textbf{ No.} & \textbf{Assertion} & \textbf{Pulling out} & \textbf{Passing VBP} %& \textbf{Cutting in}
 		 \\
 		&  &  &   \\
 		(1) & VBP outside DS$_{AV}$ & PASS & PASS  \\
